syntax = "proto3";

package spine.protodata.cli.test;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.protodata.cli.test";
option java_outer_classname = "DefaultOptionsCounterProto";
option java_multiple_files = true;

import "spine/protodata/ast.proto";

message DefaultOptionsCounter {
    option (entity).kind = PROJECTION;

    protodata.TypeName type_name = 1;

    bool timestamp_in_future_encountered = 2;
}
